--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1710,6 +1710,7 @@
     "WalletEmail.RechargeAmount": "加值金額:",
     "VipTierTimeAndResetConfigWarning": "警告：起始日期和重置頻率儲存後將無法修改。\n您確定要繼續嗎？",
     "Permission:TenantWalletManagement": "錢包管理",
-    "Menu:TenantWalletManagement": "錢包管理"
+    "Menu:TenantWalletManagement": "錢包管理",
+    "Showingtransactionrecordsfromthepast6months": "僅顯示最近6個月的交易紀錄"
   }
 }
