FIx for Pk-1703

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1746,6 +1746,9 @@
     "VipTierTimeAndResetConfigWarning": "Warning: Start date and reset frequency can not be modified after saving.\nAre you sure you want to proceed?",
     "Permission:TenantWalletManagement": "Wallet Management",
     "Menu:TenantWalletManagement": "Wallet Management",
-    "Showingtransactionrecordsfromthepast6months": "Showing transaction records from the past 6 months"
+    "Showingtransactionsfromthepast6months": "Showing transaction records from the past 6 months",
+    "WalletManagement": "Wallet Management",
+    "Wallet:Completed": "Completed",
+    "WalletTransactions_record": "wallet_transaction_record"
   }
 }
