--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1739,8 +1739,10 @@
     "WalletEmail.RechargeAmount": "Amount Added:",
     "WalletEmail.Type": "Transaction Type:",
     "WalletEmail.Balance": "Current Balance:",
-    "WalletEmail.Support": "If you have any questions, please contact our support team.",
+    "WalletEmail.SupportDeduction": "If you have any questions, please contact our support team.",
+    "WalletEmail.SupportRecharge": "Thank you for using our services.",
     "WalletEmail.Regards": "Best regards,<br/>The ibosshops.com Team",
+    "WalletEmail.RegardsRecharge": "Best regards,<br/>The Platform Team",
     "WalletDeductionNotification": "Wallet Deduction Notification",
     "WalletRechargeNotification": "Wallet Recharge Notification",
     "VipTierTimeAndResetConfigWarning": "Warning: Start date and reset frequency can not be modified after saving.\nAre you sure you want to proceed?",
