--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1711,7 +1711,9 @@
     "PercentageOfTotal": "% of Total",
     "PerformanceHighlights": "Performance Highlights",
     "BestPerformingProduct": "Best Performing Product",
+    "BestSellingProduct": "Best-Selling Product",
     "TopGroupBuyCampaign": "Top Group Buy Campaign",
+    "HighestRevenueGroupBuy": "Highest Revenue Group Buy",
     "OrderCompletionRate": "Order Completion Rate",
     "ProductSummary": "Product Summary",
     "ProductName": "Product Name",
