--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1675,6 +1675,8 @@
     "PercentageOfTotal": "總營收百分比",
     "PerformanceHighlights": "績效亮點",
     "BestPerformingProduct": "最佳表現商品",
+    "BestSellingProduct": "最熱銷商品",
+    "HighestRevenueGroupBuy": "營收最高團購",
     "TopGroupBuyCampaign": "最成功團購活動",
     "OrderCompletionRate": "訂單完成率",
     "ProductSummary": "商品摘要",
