Fix for Wallet Email localization

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1707,7 +1707,7 @@
     "WalletEmail.SupportDeduction": "如有任何疑問，請聯繫我們的客服團隊。",
     "WalletEmail.SupportRecharge": "感謝您使用我們的服務。",
     "WalletEmail.Regards": "此致<br/>小商人電商平台團隊",
-    "WalletEmail.RegardsRecharge": "此致<br/>ibosshops.com 團隊",
+    "WalletEmail.RegardsRecharge": "此致<br/>小商人電商平台團隊",
     "WalletDeductionNotification": "錢包扣款通知",
     "WalletRechargeNotification": "錢包加值確認",
     "WalletEmail.DeductioAmount": "扣除金額:",
