--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -4,7 +4,7 @@
     "LoginType": "登入類型",
     "Pikachu:EnterprisePurchaseCanOnlyUseSelfPickup": "企業採購只能使用自提",
     "ProductRankingCarouselModule": "商品排行模組",
-    "OrderInstruction": "流程簡介模組",
+    "OrderInstruction": "訂購流程",
     "CountdownTimer": "倒數模組",
     "GroupPurchaseOverview": "團購簡介模組",
     "BannerImages": "橫幅模組",
@@ -1722,6 +1722,17 @@
     "ChooseProduct": "選擇套用商品",
     "DashboardReport:UnitsSold": "售出{0}個商品",
     "DashboardReport:Revenue": "銷售額佔整體{0}%",
-    "DashboardReport:OrdersComplete": "{1}筆訂單中已完成{0}筆"
+    "DashboardReport:OrdersComplete": "{1}筆訂單中已完成{0}筆",
+    "TitleCannotbeemptyinGroupPurchaseOverviewModule": " 團購簡介模組的標題不能為空",
+    "TitleCannotbeemptyinGroupBuyOrderInstructionModule": "流程簡介模組的標題不能為空",
+    "TitleCannotbeemptyinProductRankingCarouselModule": "商品排行模組的標題不能為空",
+    "ItemMustHaveVariant": "商品「{0}」必須選擇至少一種規格。",
+    "AreYouSureToDeleteThisBadge": "確定要刪除此標籤嗎？此操作無法復原，且將從所有商品與已設定項目中移除。",
+    "PleaseAddImageinGroupPurchaseOverviewModule": "請在團購簡介模組中新增圖片。",
+    "IfyouhaveenabledButton,thenButtonTextisrequired.": "如果啟用了按鈕，則必須輸入按鈕文字。",
+    "PleaseAddImageinGroupBuyOrderInstructionModule": "請在流程簡介模組中新增圖片。",
+    "IfyouhaveenabledButton,thenButtonLinkisrequired.": "如果啟用了按鈕，則必須輸入按鈕連結。",
+    "SubTitleCannotbeemptyinProductRankingCarouselModules": "請輸入商品排行模組的副標題。",
+    "VariantsMustHavePrice": "商品「{0}」的某些規格缺少價格。"
   }
 }
