Dashboard sales report localization updates

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1666,10 +1666,10 @@
     "GeneratedOn": "產生日期",
     "ReportPeriod": "報告期間",
     "KeyMetrics": "關鍵指標",
-    "Value": "值",
+    "Value": "數值",
     "TotalOrdersCompleted": "已完成訂單總數",
     "TotalItemsSold": "銷售商品總數",
-    "ActiveGroupBuys": "進行中的團購",
+    "ActiveGroupBuys": "活躍的團購",
     "Revenue": "營收",
     "CompletedOrders": "完成訂單",
     "PercentageOfTotal": "總營收百分比",
