#PK-1729 Transaction Description ZH localization for front-end API

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1694,9 +1694,9 @@
     "LogisticsFeeDeducted": "Logistics Fee Deducted",
     "ManualTopUp": "Manual Top-Up",
     "ManualDeduction": "Manual Deduction",
-    "ShoppingCreditDescription:CashbackEarned": "Cashback Earned: Order#",
-    "ShoppingCreditDescription:OrderCancelled": "Order Cancelled: Order#",
-    "ShoppingCreditDescription:CreditDeduction": "Credit Deduction: Order#",
+    "ShoppingCreditDescription:CashbackEarned": "Cashback Earned: Order# {0}",
+    "ShoppingCreditDescription:OrderCancelled": "Order Cancelled: Order# {0}",
+    "ShoppingCreditDescription:CreditDeduction": "Credit Deduction: Order# {0}",
     "SummaryReport": "Summary Report",
     "GroupBuySalesReport": "Group Buy Sales Report",
     "GeneratedOn": "Generated on",
