#PK-1669 Add EcPay reconciliation and net payout

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1846,8 +1846,8 @@
     "Result": "Result",
     "Reason": "Reason",
 
-    "Unknown": "Unknown"
-
-
+    "Unknown": "Unknown",
+    "Permission:EcPayReconciliation": "Payout Details",
+    "Menu:EcPayReconciliation": "Payout Details"
   }
 }
