--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1831,6 +1831,20 @@
     "Email:LogisticsFee:Regards": "此致",
     "Email:LogisticsFee:TeamName": "小商人電商平台團隊",
     "WalletTransactionType:LogisticsFeeDeduction": "物流費用扣除",
-    "NoteDescription": "訂單編號: {0}"
+    "NoteDescription": "訂單編號: {0}",
+    "Email:Subject:LogisticsFeeRetryProcessing": "物流費補扣款通知",
+    "Email:Greeting": "親愛的 {0}，",
+    "Email:RetryProcessingCompleted": "您的物流費用補扣款處理已完成，以下為處理結果：",
+    "Email:File": "檔案名稱：{0}",
+    "Email:FileType": "檔案類型：{0}",
+    "Email:ProcessingDate": "處理時間：{0}",
+    "Email:Results": "處理摘要：",
+    "Email:SuccessfulRetries": "- 成功補扣筆數：{0}",
+    "Email:FailedRetries": "- 補扣失敗筆數：{0}",
+    "Email:TotalAmountProcessed": "- 成功補扣總金額：${0}",
+    "Email:FailureReasons": "失敗原因：",
+    "Email:ThankYou": "感謝您使用我們的服務。",
+    "Email:BestRegards": "此致",
+    "Email:TeamSignature": "小商人電商平台團隊"
   }
 }
