Commit For Pk-1757

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1878,6 +1878,8 @@
     "Email:FailureReasons": "Failure Reasons:",
     "Email:ThankYou": "Thank you for using our services.",
     "Email:BestRegards": "Best regards,",
-    "Email:TeamSignature": "The ibosshops.com Team"
+    "Email:TeamSignature": "The ibosshops.com Team",
+    "ProcessedDate": "Processed Date",
+    "FailureReason": "Failure Reason"
   }
 }
