#PK-1675 Merge parameters json

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1890,8 +1890,12 @@
     "ReturnsAndExchanges": "Returns & Exchanges",
     "Notification:Orders:CreatedTitle": "Order Created #{OrderNo}",
     "Notification:Orders:CreatedMessage": "A new order #{OrderNo} has been created.",
-    "Notification:Orders:ManualTransferTitle": "Manual bank transfer verification required #{OrderNo}",
-    "Notification:Orders:ManualTransferMessage": "A new order is submitted with manual bank transfer. Needs verification before order is processed.",
+    "Notification:Orders:ManualBankTransferTitle": "Manual bank transfer verification required #{OrderNo}",
+    "Notification:Orders:ManualBankTransferMessage": "A new order is submitted with manual bank transfer. Needs verification before order is processed.",
+    "Notification:Orders:ManualBankTransferConfirmedTitle": "Manual bank transfer verified #{OrderNo}",
+    "Notification:Orders:ManualBankTransferConfirmedMessage": "Manual bank transfer for order #{OrderNo} has been verified by '{UserName}'.",
+    "Notification:Orders:PaymentMethodUpdatedTitle": "Payment method updated #{OrderNo}",
+    "Notification:Orders:PaymentMethodUpdatedMessage": "Payment method has been updated from '{OldPaymentMethod}' to '{NewPaymentMethod}' by '{UserName}'.",
     "RelativeTime:JustNow": "just now",
     "RelativeTime:SecondsAgo": "{0} seconds ago",
     "RelativeTime:MinutesAgo": "{0} minutes ago",
