#PK-1675 UI enhancement and backend methods

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1896,6 +1896,12 @@
     "Notification:Orders:ManualBankTransferConfirmedMessage": "Manual bank transfer for order #{OrderNo} has been verified by '{UserName}'.",
     "Notification:Orders:PaymentMethodUpdatedTitle": "Payment method updated #{OrderNo}",
     "Notification:Orders:PaymentMethodUpdatedMessage": "Payment method has been updated from '{OldPaymentMethod}' to '{NewPaymentMethod}' by '{UserName}'.",
+    "Notification:Orders:OrdersMergedTitle": "Orders merged #{OrderNo}",
+    "Notification:Orders:OrdersMergedMessage": "Orders have been merged to a new order #{OrderNo} by '{UserName}'.",
+    "Notification:Orders:OrdersSplitTitle": "Order split #{OrderNo}",
+    "Notification:Orders:OrdersSplitMessage": "Order #{OrderNo} has been split by '{UserName}'.",
+    "Notification:Orders:RefundRequestedTitle": "Refund requested #{OrderNo}",
+    "Notification:Orders:RefundRequestedMessage": "Refund for Order #{OrderNo} has been requested by '{UserName}'.",
     "RelativeTime:JustNow": "just now",
     "RelativeTime:SecondsAgo": "{0} seconds ago",
     "RelativeTime:MinutesAgo": "{0} minutes ago",
