#PK-1675 Order app service notification implementation

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1924,6 +1924,12 @@
     "Notification:Orders:OrderCompletedMessage": "Order #{OrderNo} has been marked completed by '{UserName}'.",
     "Notification:Orders:OrderClosedTitle": "Order closed #{OrderNo}",
     "Notification:Orders:OrderClosedMessage": "Order #{OrderNo} has been marked closed by '{UserName}'.",
+    "Notification:Orders:InactiveOrdersClosedTitle": "Orders closed",
+    "Notification:Orders:InactiveOrdersClosedMessage": "{Count} orders have been closed due to inactivity.",
+    "Notification:Orders:PaymentProcessedTitle": "Payment processed #{OrderNo}",
+    "Notification:Orders:PaymentProcessedMessage": "Payment for order #{OrderNo} has been processed by '{UserName}'.",
+    "Notification:Orders:OrderExpiredTitle": "Order expired #{OrderNo}",
+    "Notification:Orders:OrderExpiredMessage": "Order #{OrderNo} has been marked expired by '{UserName}'.",
     "RelativeTime:JustNow": "just now",
     "RelativeTime:SecondsAgo": "{0} seconds ago",
     "RelativeTime:MinutesAgo": "{0} minutes ago",
