#PK-1675 return and exchange notification implementation

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1910,8 +1910,12 @@
     "Notification:Orders:ShippingStatusUpdatedMessage": "Shipping status for Order #{OrderNo} has been updated from '{PreviousShippingStatus}' to '{ShippingStatus}' by '{UserName}'.",
     "Notification:Orders:OrderStatusUpdatedTitle": "Order status updated #{OrderNo}",
     "Notification:Orders:OrderStatusUpdatedMessage": "Order status for Order #{OrderNo} has been updated from '{PreviousOrderStatus}' to '{OrderStatus}' by '{UserName}'.",
+    "Notification:Orders:ReturnRequestedTitle": "Return requested #{OrderNo}",
+    "Notification:Orders:ReturnRequestedMessage": "Return requested for order #{OrderNo} by '{UserName}'.",
+    "Notification:Orders:ExchangeRequestedTitle": "Exchange requested #{OrderNo}",
+    "Notification:Orders:ExchangeRequestedMessage": "Exchange requested for order #{OrderNo} by '{UserName}'.",
     "Notification:Orders:ReturnStatusUpdatedTitle": "Return status updated #{OrderNo}",
-    "Notification:Orders:ReturnStatusUpdatedMessage": "Return status for Order #{OrderNo} has been updated from '{PreviousReturnStatus}' to '{ReturnStatus}' by '{UserName}'.",
+    "Notification:Orders:ReturnStatusUpdatedMessage": "Return status for order #{OrderNo} has been updated from '{PreviousReturnStatus}' to '{ReturnStatus}' by '{UserName}'.",
     "Notification:Orders:OrderCancelledTitle": "Order cancelled #{OrderNo}",
     "Notification:Orders:OrderCancelledMessage": "Order #{OrderNo} has been cancelled by '{UserName}'.",
     "Notification:Orders:InvoiceVoidedTitle": "Invoice voided #{OrderNo}",
