--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1878,6 +1878,10 @@
     "Notification:Orders:ShippingStatusUpdatedMessage": "訂單 #{OrderNo} 的出貨狀態已由「{PreviousShippingStatus}」更新為「{ShippingStatus}」，操作者：{UserName}。",
     "Notification:Orders:OrderStatusUpdatedTitle": "訂單狀態已更新 #{OrderNo}",
     "Notification:Orders:OrderStatusUpdatedMessage": "訂單 #{OrderNo} 的狀態已由「{PreviousOrderStatus}」更新為「{OrderStatus}」，操作者：{UserName}。",
+    "Notification:Orders:ReturnRequestedTitle": "退貨申請 #{OrderNo}",
+    "Notification:Orders:ReturnRequestedMessage": "訂單 #{OrderNo} 的退貨申請，由「{UserName}」提出。",
+    "Notification:Orders:ExchangeRequestedTitle": "換貨申請 #{OrderNo}",
+    "Notification:Orders:ExchangeRequestedMessage": "訂單 #{OrderNo} 的換貨申請，由「{UserName}」提出。",
     "Notification:Orders:ReturnStatusUpdatedTitle": "退貨狀態已更新 #{OrderNo}",
     "Notification:Orders:ReturnStatusUpdatedMessage": "訂單 #{OrderNo} 的退貨狀態已由「{PreviousReturnStatus}」更新為「{ReturnStatus}」，操作者：{UserName}。",
     "Notification:Orders:OrderCancelledTitle": "訂單已取消 #{OrderNo}",
@@ -1892,6 +1896,12 @@
     "Notification:Orders:OrderCompletedMessage": "訂單 #{OrderNo} 已由「{UserName}」標記為完成。",
     "Notification:Orders:OrderClosedTitle": "訂單已結案 #{OrderNo}",
     "Notification:Orders:OrderClosedMessage": "訂單 #{OrderNo} 已由「{UserName}」標記為結案。",
+    "Notification:Orders:InactiveOrdersClosedTitle": "訂單已關閉",
+    "Notification:Orders:InactiveOrdersClosedMessage": "由於閒置，已有 {Count} 筆訂單被關閉。",
+    "Notification:Orders:PaymentProcessedTitle": "付款已處理 #{OrderNo}",
+    "Notification:Orders:PaymentProcessedMessage": "訂單 #{OrderNo} 的付款已由「{UserName}」處理。",
+    "Notification:Orders:OrderExpiredTitle": "訂單已過期 #{OrderNo}",
+    "Notification:Orders:OrderExpiredMessage": "訂單 #{OrderNo} 已由「{UserName}」標記為過期。",
     "RelativeTime:JustNow": "剛剛",
     "RelativeTime:SecondsAgo": "{0} 秒前",
     "RelativeTime:MinutesAgo": "{0} 分鐘前",
